--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
   background-attachment: fixed;
   color: #354538;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to right bottom, #00f260, #0575e6);
+}
 
 a {
   text-decoration: none;
@@ -28,5 +35,5 @@ a:hover {
   background-color: #fff;
   border-radius: 20px;
   padding: 25px 15px;
+  box-shadow: 0 0 10px black;
 }
-
